[package]
name = "free-cloak"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "cloak"
path = "src/main.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
bcrypt = "0.15.1"
rpassword = "7.3.1"
sha2 = "0.10.8"
